added material design

--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/index.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Glegoo:400,700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/5407a4ef2f.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
